--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
+    "csstype": "^3.0.10",
     "eslint": "^7.14.0",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
