--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.4.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "styled-components": "^5.3.3"
@@ -24,6 +25,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.39",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.21",
